# awstest

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: pushImageERC.yml
src/: main.rs
src/api/: health.rs  mod.rs
